# integration

./: .env  .gitignore  README.md  capsule_contacts.json  contacts.json  pyproject.toml  states.json  tokens.json  zoho_contacts.json
src/addons/: storage.py
src/addons/integration/: crm_enum.py  hooks.py  hookspec.py  middleware.py
src/addons/integration/plugins/: capsule.py  zoho.py
src/api/: capsule_contacts.json  contacts.csv  contacts.json  dependency.py  main.py  states.json  token_data.json  tokens.json  zoho_contacts.json
src/api/app_log/: app.log.1  app.log.2  app.log.3  app.log.4  app.log.5  app.log.6
src/api/contact_data/: capsule_contacts.json  zoho_contacts.json
src/api/entrypoints/: callback.py  routes.py
src/api/utils/: logger.py
src/config/: config.py  settings.py
src/core/: exception.py  middleware.py
src/crmintegration/: __init__.py
