[project]
name = "crmintegration"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shreeya34", email = "1shreeya2@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pluggy>=1.5.0",
    "python-dotenv>=1.1.0",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crmintegration"]
